--- a/apps/users/templates/users/login.html
+++ b/apps/users/templates/users/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h2>Lohin</h2>
+    <h2>Login</h2>
 
     <form method="post">
         {% csrf_token %}
