--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -5,9 +5,14 @@
 {% endblock %}
 
 {% block content %}
-    <h2>Hush kelibsiz!</h2>
+<div class="container mx-auto px-4 py-10 text-center">
+    <!-- Sarlavha -->
+    <h2 class="text-4xl font-bold text-gray-800 mb-4">Xush kelibsiz E-Shop saytiga!</h2>
+    <p class="text-gray-600 mb-6">Eng yaxshi mahsulotlar, qulay narxlar va tezkor yetkazib berish!</p>
 
-    <u>
-        <li><a href="{% url 'admin_dashboard' %}" target="_blank">Super Admin</a></li>
-    </u>
+    <!-- Login havolasi -->
+    <!-- <div class="mt-8">
+        <a href="{% url 'login' %}" class="btn btn-primary">Kirish</a>
+    </div> -->
+</div>
 {% endblock %}
