--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,7 @@
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
                                 <li><a href="#" class="dropdown-item">Profil</a></li>
                                 <li><hr class="dropdown-divider"></li>
+                                <li><a href="{% url 'logout' %}" class="dropdown-item text-danger">Chiqish</a></li>
                             </ul>
                         </div>
                         {% else %}
